[package]
name = "ansi-control-codes"
description = "This library contains all ANSI Escape Codes that are defined in the ISO 6429 Standard"
version = "0.0.1"
edition = "2021"

authors = ["Frank Zechert <rust.frank@zechert.net>"]
repository = "https://git.zechert.net/fzechert/ansi-control-codes.git"
license = "MIT"

# crates.io
publish = true
keywords = ["ansi", "escape-codes", "ISO-6429", "ECMA-48", "ANSI-X364"]
categories = ["command-line-interface"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
