[package]
name = "ansi-control-codes"
description = "This library contains all ANSI Escape Codes that are defined in the ISO 6429 Standard"
version = "1.0.1"
edition = "2021"
rust-version = "1.66.1"

authors = ["Frank Zechert <rust.frank@zechert.net>"]
repository = "https://github.com/fzechert/ansi-control-codes"
license = "MIT"

# crates.io
publish = true
keywords = ["ansi", "escape-codes", "control-codes", "ISO-6429", "ECMA-48"]
categories = ["command-line-interface"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE.txt", "CHANGELOG.md"]
readme = "README.md"

[dependencies]

[features]
parser = []
explain = []

[package.metadata.docs.rs]
all-features = true
